Fixed Close Button Iphone

--- a/src/style.css
+++ b/src/style.css
@@ -1596,8 +1596,6 @@ button:hover {
 }
 #side-menu .go-back svg,
 #side-menu .close-btn svg {
-  height: 100%;
-  width: 100%;
   font-size: 1.3rem;
   cursor: pointer;
   transition: 0.3s ease color, 0.5s ease transform;
